# reaper-audio-tag

./: .gitignore  .reapack-index.conf  CHANGELOG.md  README.md  README.ru.md  THIRD_PARTY_NOTICES.md  index.xml  pyproject.toml  security_best_practices_report.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
backend/: pyinstaller_entrypoint.py
backend/reaper_audio_tag_backend/: __init__.py  audio.py  cli.py  constants.py  json_io.py  labels.py  model_store.py  onnx_runner.py  report.py
docs/: install.md  install.ru.md  model.md  model.ru.md  troubleshooting.md  troubleshooting.ru.md
reaper/: PANNs Item Report - Debug Export.lua  PANNs Item Report.lua  REAPER Audio Tag - Configure.lua  REAPER Audio Tag - Debug Export.lua  REAPER Audio Tag - Setup.lua  REAPER Audio Tag.lua
reaper/lib/: app_paths.lua  audio_export.lua  configure_runtime.lua  path_utils.lua  report_icon_assets.lua  report_icon_map.lua  report_icons.lua  report_presenter.lua  report_run_cleanup.lua  report_telemetry.lua  report_ui_state.lua  runtime_client.lua  setup_release_info.lua  tag_writeback.lua
runtime/: README.md
runtime/docs/: install.md
scripts/: bootstrap.command  bootstrap_runtime.sh  export_cnn14_to_onnx.py  generate_report_emoji_assets.py  prepare_model_asset.py
tests/: README.md  __init__.py
tests/integration/: __init__.py  test_end_to_end.py
tests/lua/: run_tests.lua  test_audio_export.lua  test_package_surface.lua  test_report_formatter.lua  test_report_icons.lua  (+6 more)
(+46 files in other folders)
