[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "reaper-panns-item-report"
version = "0.4.3"
description = "REAPER audio tagging backend powered by PANNs Cnn14 ONNX."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = {text = "MIT"}
authors = [
  {name = "dennech"},
]
dependencies = [
  "certifi>=2024.8.30",
  "numpy>=1.26,<3.0",
  "onnxruntime>=1.23,<1.26; platform_system != 'Windows'",
  "onnxruntime-directml>=1.22,<1.23; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
  "pyinstaller>=6.11,<7.0",
]

[project.scripts]
reaper-audio-tag-backend = "reaper_audio_tag_backend.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["backend/reaper_audio_tag_backend"]
include = [
  "reaper/data/class_labels_indices.csv",
]

[tool.hatch.build.targets.sdist]
include = [
  "/backend",
  "/reaper",
  "/tests",
  "/scripts",
  "/README.md",
  "/README.ru.md",
  "/CHANGELOG.md",
  "/THIRD_PARTY_NOTICES.md",
]

[tool.pytest.ini_options]
pythonpath = [
  "backend",
]
testpaths = [
  "tests/python",
]
